# Soundscape-Android

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE.md  README.md  build.gradle.kts  categorise.sh  generate-license-icon.sh  gradle.properties  q  settings.gradle.kts  test_cloud_backup.sh  test_local_backup.sh
app/: .gitignore  build.gradle.kts  google-services.json  proguard-rules.pro
app/src/main/cpp/: AudioBeacon.cpp  AudioBeacon.h  AudioBeaconBuffer.cpp  AudioBeaconBuffer.h  AudioEngine.cpp  AudioEngine.h  AudioMixer.cpp  AudioMixer.h  AudioSourceBase.h  BeaconDescriptor.h  CMakeLists.txt  GeoUtils.h  SimpleResampler.cpp  SimpleResampler.h  SteamAudioSpatializer.cpp  SteamAudioSpatializer.h  Trace.h  WavDecoder.cpp  WavDecoder.h
app/src/main/cpp/fmod/: LICENSE.TXT  revision.txt
app/src/main/cpp/fmod/api/core/inc/: fmod.h  fmod.hpp  fmod_android.h  fmod_codec.h  fmod_common.h  fmod_dsp.h
app/src/main/cpp/fmod/api/core/lib/: README.txt
app/src/main/cpp/steamaudio/include/: phonon_version.h
docs/: .gitignore  Gemfile  README.md  _config.yml  actions.md  architecture.md  audio-API.md  debugging-geojson.md  developers.md  framework.md  geoengine.md  help.md  image.sh  index.md  mapping.md  pathway-to-product.md  privacy-policy.md  release-notes.md  screenshots.md  smoke_test.md  taginfo.json  terms-and-conditions.md  testing.md  tricky-locations.md  wider-sta-test-instructions.md
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
iosApp/: project.yml
maestro/: LocationDetails.yaml  Onboarding.yaml  SwipeDownAndTap.yaml  SwipeUpAndTap.yaml
(+1495 files in other folders)
